Создано с помощью Colaboratory

--- a/Py_10_Python_task.ipynb
+++ b/Py_10_Python_task.ipynb
@@ -210,13 +210,39 @@
       "source": [
         "def template(a1,a2,a3):\n",
         "    print(\"Периметр:\", a1+a2+a3)\n",
-        "    print(\"Площадь:\", a1*a2*a3)\n"
+        "    print(\"Площадь:\", a1*a2*a3)\n",
+        "\n",
+        "def template(a,b,c):\n",
+        "    a, b, c= sorted([a,b,c])\n",
+        "\n",
+        "    print('Периметр: ', sum((a, b, c)))\n",
+        "    p = sum((a, b, c)) / 2\n",
+        "    print(f'Площадь: {(p * (p - a) * (p - b) * (p - c)) ** 0.5}')\n",
+        "    print(f'Равнобедренный: {(\"нет\", \"да\")[len(set((a, b, c)))<3]}')\n",
+        "    print(f'Равносторонний: {(\"нет\", \"да\")[len(set((a, b, c)))==1]}')\n",
+        "\n",
+        "template(5, 4, 5)"
       ],
       "metadata": {
-        "id": "UU87kGCsmriV"
+        "id": "UU87kGCsmriV",
+        "outputId": "e8512cde-f407-43db-881b-2f2c03a80373",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Периметр:  14\n",
+            "Площадь: 9.16515138991168\n",
+            "Равнобедренный: да\n",
+            "Равносторонний: нет\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -269,7 +295,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,20 +360,39 @@
         "def find_mountain(listCoor):\n",
         "    row=0\n",
         "    col=0\n",
-        "    for coordIn in listCoor:\n",
-        "        for coor in coordIn:\n",
-        "\n",
+        "    maxValue=0\n",
+        "    for coordIn in range(len(listCoor)):\n",
+        "        for coor in range(len(listCoor[coordIn])):\n",
+        "            if maxValue < listCoor[coordIn][coor]:\n",
+        "                maxValue=listCoor[coordIn][coor]\n",
+        "                row=coordIn\n",
+        "                col= coor\n",
         "    return (row,col)\n",
         "\n",
-        "a = [[1, 3, 1], [3, 2, 5], [2, 2, 2]]\n",
+        "a =  [[2, 4, 2, 3, 2], [3, 2, 3, 4, 3]]\n",
+        "row, col = find_mountain(a)\n",
         "\n",
+        "print(a[row][col])\n",
         "print(find_mountain(a))"
       ],
       "metadata": {
-        "id": "sv_bSRtIqY6E"
+        "id": "sv_bSRtIqY6E",
+        "outputId": "5496e734-7cc7-450a-fe36-be27b392c942",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "(0, 1)\n"
+          ]
+        }
+      ]
     }
   ]
 }
