Создано с помощью Colaboratory

--- a/Py_12_Python_task.ipynb
+++ b/Py_12_Python_task.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "tEiGxNMgKYso",
         "outputId": "9d55475b-af80-4328-d477-0e2ce3c9f260",
@@ -148,7 +148,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,12 +213,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def inputStr():\n",
+        "    numStr = int(input())\n",
+        "    strList = list()\n",
+        "    while numStr>0 :\n",
+        "        strList.append(input())\n",
+        "        numStr-=1\n",
+        "    return strList\n",
+        "\n",
+        "\n",
+        "def findNums(lineNumber):\n",
+        "    num1,num2,*otherNums= lineNumber.split(\", \")\n",
+        "    tmp=[]\n",
+        "    for number in otherNums:\n",
+        "        if int(number)%int(num1) == 0  and len(num2) == len(number):\n",
+        "            tmp.append(number)\n",
+        "    print(*tmp)\n",
+        "\n",
+        "\n",
+        "\n",
+        "numsList= inputStr()\n",
+        "\n",
+        "for lineNums in numsList:\n",
+        "    findNums(lineNums)"
+      ],
       "metadata": {
-        "id": "VZFVQHCfJlfa"
+        "id": "VZFVQHCfJlfa",
+        "outputId": "e4fbc0b0-7773-4f9d-c40b-9ece6c60c24f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "4, 188, 114, 172, 61, 64, 224, 676\n",
+            "15, 145, 30, 120, 345, 1005, 600\n",
+            "172 224 676\n",
+            "120 345 600\n"
+          ]
+        }
+      ]
     }
   ]
 }
