Создано с помощью Colaboratory

--- a/Py_11_Python_task.ipynb
+++ b/Py_11_Python_task.ipynb
@@ -162,7 +162,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,12 +250,79 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "item={}\n",
+        "count_item=0\n",
+        "count_receipt=1\n",
+        "\n",
+        "def add_item(item_name, item_cost):\n",
+        "    global item, count_item\n",
+        "    item[count_item]={item_name: item_cost};\n",
+        "    count_item+=1\n",
+        "\n",
+        "\n",
+        "def print_receipt():\n",
+        "    global count_item, count_receipt, item\n",
+        "    if count_item == 0:\n",
+        "       return\n",
+        "       count_receipt+=1\n",
+        "    print(f\"Чек {count_receipt}. Всего предметов: {count_item}\")\n",
+        "    print(*item)\n",
+        "    print(\"−−−−−\")\n",
+        "    item={}\n",
+        "\n",
+        "\n",
+        "\n",
+        "add_item('Блокнот', 100)\n",
+        "\n",
+        "print_receipt()\n",
+        "\n",
+        "add_item('Ручка', 70)\n",
+        "\n",
+        "print_receipt()\n",
+        "\n",
+        "print_receipt()\n",
+        "\n",
+        "add_item('Булочка', 15)\n",
+        "\n",
+        "add_item('Булочка', 15)\n",
+        "\n",
+        "add_item('Чай', 5)\n",
+        "\n",
+        "print_receipt()\n",
+        "\n",
+        "add_item('Булочка', 15)\n",
+        "\n",
+        "add_item('Булочка', 15)"
+      ],
       "metadata": {
-        "id": "CW48ER5pEjCV"
+        "id": "CW48ER5pEjCV",
+        "outputId": "48ca7f41-477e-48ea-9080-bdc5c92e012e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Чек 1. Всего предметов: 1\n",
+            "0\n",
+            "−−−−−\n",
+            "Чек 1. Всего предметов: 2\n",
+            "1\n",
+            "−−−−−\n",
+            "Чек 1. Всего предметов: 2\n",
+            "\n",
+            "−−−−−\n",
+            "Чек 1. Всего предметов: 5\n",
+            "2 3 4\n",
+            "−−−−−\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -294,12 +361,60 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "friends_Alice={}\n",
+        "\n",
+        "def add_friends(name_of_person,list_of_friends):\n",
+        "     friends = friends_Alice.get(name_of_person)\n",
+        "     if friends:\n",
+        "        friends_Alice[name_of_person] = friends + list_of_friends\n",
+        "     else:\n",
+        "        friends_Alice[name_of_person] = list_of_friends\n",
+        "\n",
+        "\n",
+        "def are_friends(name_of_person1,name_of_person2):\n",
+        "    if name_of_person2 in friends_Alice[name_of_person1]:\n",
+        "        return True\n",
+        "    return False\n",
+        "\n",
+        "\n",
+        "def print_friends(name_of_person):\n",
+        "     s = reversed(friends_Alice[name_of_person])\n",
+        "     for i in s:\n",
+        "        print(i, end=' ')\n",
+        "     print()\n",
+        "\n",
+        "\n",
+        "\n",
+        "add_friends(\"Алла\", [\"Марина\", \"Иван\"])\n",
+        "\n",
+        "print(are_friends(\"Алла\", \"Мария\"))\n",
+        "\n",
+        "add_friends(\"Алла\", [\"Мария\"])\n",
+        "\n",
+        "print(are_friends(\"Алла\", \"Мария\"))\n",
+        "\n",
+        "print_friends(\"Алла\")"
+      ],
       "metadata": {
-        "id": "8g_-G2_8EpuW"
+        "id": "8g_-G2_8EpuW",
+        "outputId": "d2f8853a-921a-4a5f-a507-05b908d5ff60",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n",
+            "Мария Иван Марина \n"
+          ]
+        }
+      ]
     }
   ]
 }
