Создано с помощью Colaboratory

--- a/Py_11_Python_task.ipynb
+++ b/Py_11_Python_task.ipynb
@@ -88,7 +88,14 @@
         "id": "F-CY81aCENgW"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def larger_root(p,q):\n",
+        "\n",
+        "    return large_value\n",
+        "\n",
+        "def smaller_root(p,q):\n",
+        "    return small_value\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -253,7 +260,7 @@
       "source": [
         "item={}\n",
         "count_item=0\n",
-        "count_receipt=1\n",
+        "count_receipt=0\n",
         "\n",
         "def add_item(item_name, item_cost):\n",
         "    global item, count_item\n",
@@ -265,10 +272,16 @@
         "    global count_item, count_receipt, item\n",
         "    if count_item == 0:\n",
         "       return\n",
-        "       count_receipt+=1\n",
+        "\n",
+        "    count_receipt+=1\n",
         "    print(f\"Чек {count_receipt}. Всего предметов: {count_item}\")\n",
-        "    print(*item)\n",
+        "    for product in item.values():\n",
+        "        summ=0\n",
+        "        for name,price in product.items():\n",
+        "            print(f\"{name} - {price}\")\n",
+        "            summ+=price\n",
         "    print(\"−−−−−\")\n",
+        "    count_item=0\n",
         "    item={}\n",
         "\n",
         "\n",
@@ -297,7 +310,7 @@
       ],
       "metadata": {
         "id": "CW48ER5pEjCV",
-        "outputId": "48ca7f41-477e-48ea-9080-bdc5c92e012e",
+        "outputId": "e3e74f7b-eac2-4961-dbfb-fe6c0213df6a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -309,16 +322,15 @@
           "name": "stdout",
           "text": [
             "Чек 1. Всего предметов: 1\n",
-            "0\n",
+            "Блокнот - 100\n",
             "−−−−−\n",
-            "Чек 1. Всего предметов: 2\n",
-            "1\n",
+            "Чек 2. Всего предметов: 1\n",
+            "Ручка - 70\n",
             "−−−−−\n",
-            "Чек 1. Всего предметов: 2\n",
-            "\n",
-            "−−−−−\n",
-            "Чек 1. Всего предметов: 5\n",
-            "2 3 4\n",
+            "Чек 3. Всего предметов: 3\n",
+            "Булочка - 15\n",
+            "Булочка - 15\n",
+            "Чай - 5\n",
             "−−−−−\n"
           ]
         }
@@ -403,7 +415,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
