Создано с помощью Colaboratory

--- a/Py_11_Python_task.ipynb
+++ b/Py_11_Python_task.ipynb
@@ -83,18 +83,59 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "F-CY81aCENgW"
+        "id": "F-CY81aCENgW",
+        "outputId": "b7010c33-4e63-4fee-b657-5659f8d61ffa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-1.0\n",
+            "-1.0\n",
+            "0\n",
+            "-2.5\n",
+            "1\n",
+            "2.25\n",
+            "0.5 2.0\n"
+          ]
+        }
+      ],
       "source": [
-        "def larger_root(p,q):\n",
+        "import math\n",
         "\n",
-        "    return large_value\n",
+        "def discriminant(a, b, c):\n",
+        "    return b * b - 4 * a * c\n",
         "\n",
-        "def smaller_root(p,q):\n",
-        "    return small_value\n"
+        "\n",
+        "def smaller_root(p, q):\n",
+        "    d = discriminant(1, p, q)\n",
+        "    return (-p - math.sqrt(d)) / 2\n",
+        "\n",
+        "\n",
+        "def larger_root(p, q):\n",
+        "    d = discriminant(1, p, q)\n",
+        "    return (-p + math.sqrt(d)) / 2\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "\n",
+        "    input_p= float(input())\n",
+        "    input_q= float(input())\n",
+        "\n",
+        "    print(discriminant(1,input_p,input_q,))\n",
+        "    print(smaller_root(input_p,input_q), larger_root(input_p, input_q), sep=\" \")\n",
+        "\n",
+        "\n",
+        "print(smaller_root(2, 1))\n",
+        "print(larger_root(2, 1))\n",
+        "print(discriminant(1, 2, 1))\n",
+        "main()"
       ]
     },
     {
@@ -315,7 +356,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
